# xia2

./: .bumpversion.cfg  .codecov.yml  .git-notifier  .gitattributes  .gitignore  .isort.cfg  .known-python3-violations  .pre-commit-config.yaml  .python3-test-failures  .travis.yml  CHANGELOG.rst  LICENSE  README.md  SConscript  XIA2DPAVersion.py  XIA2Version.py  __init__.py  conftest.py  development-branch-please-do-not-use  factory.py  libtbx_config  libtbx_refresh.py  license.txt  pyproject.toml  pytest.ini  readme.txt  run_tests.py  setup.bat  setup.cfg  setup.csh  setup.py  setup.sh  setup_dpa.bat  setup_dpa.csh  setup_dpa.sh
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-mac.yml  azure-pipelines.yml  flake8-validation.py  lint-validation.py  unix-build.yml
.github/: stale.yml
Applications/: aimless2gnuplot  amatrix  amatrix.bat  amatrix.py  ami  ami.bat  ami.py  autoCHEF  autoCHEF.bat  cbf_mini_to_full_cbf_with_template  cbfdump  cbfdump.bat  fix_6m.py  generate_sdcorrection  generate_sdcorrection.bat  generate_sdcorrection.py  get_ccp4_commands  get_ccp4_commands.bat  get_ccp4_commands.py  get_mosflm_commands  get_mosflm_commands.bat  get_mosflm_commands.py  image_selector  image_selector.bat  image_selector.py  print_labelit_exception  print_labelit_exception.py  pychef  pychef.bat  pydiffdump  pydiffdump.bat  pydiffdump.py  pydiffdump2xds  scala2gnuplot  test_image_header  test_image_header.py  test_pilatus_scan  x1335  x1691  xia2  (+57 more)
Attic/: Attic1.py  found_in_toolkit_multi.py  xia2pointgroup  xia2pointgroup.py
Background/: Background.py
Data/: citations.lib  citations.xml  detectors.lib
Decorators/: CCP4Decorator.py  DecoratorFactory.py  DecoratorHelper.py
Driver/: ClusterDriverFactory.py  DefaultClusterDriver.py  DefaultDriver.py  DriverFactory.py  DriverHelper.py  InteractiveDriver.py  PythonDriver.py  QSubDriver.py  ScriptDriver.py  SimpleDriver.py  SunGridEngineClusterDriver.py  test_ClusterDriverFactory.py  test_DefaultDriver.py  test_DriverFactory.py  test_timing.py  timing.py
DriverExceptions/: NotAvailableError.py
Experts/: CoordinateTests.py  DRStrategyExpert.py  Filenames.py  FindImages.py  LatticeExpert.py  MatrixExpert.py  MissetExpert.py  NewStuff.py  PattersonExpert.py  ReferenceFrame.py  ResolutionExperts.py  SymmetryExpert.py  TestSymmetryExpert.py  WedgeExpert.py  example.xparm  test_LatticeExpert.py
Functions/: add_dose_time_to_mtz.py
GUI/: dataset.py
Handlers/: CIF.py  Citations.py  CommandLine.py  Decision.py  Environment.py  Exception.py  Executables.py  Files.py  Flags.py  PDBStructureFile.py  Phil.py  PipelineSelection.py  Sequence.py  Streams.py  Syminfo.py  Versions.py  XInfo.py  mmCIF.py  preferences.xia  test_CommandLine.py
Interfaces/: Indexer.py
Modules/: AnalyseMyIntensities.py  BESTStrategyComputer.py  BP3PhaseComputer.py  CCP4IntegraterImplementation.py  CCP4InterRadiationDamageDetector.py  CCP4IntraRadiationDamageDetector.py  CCP4Scaler.py  CCP4ScalerHelpers.py  CCP4ScalerImplementation.py  CCP4ScalerImplementationHelpers.py  CCP4ScalerImplementationR.py  CCP4ScalerR.py  CCTBXIndexTest.py  CCTBXIndexTest2.py  CctbxFrenchWilson.py  CellRefImageSelect.py  DeltaCcHalf.py  DoseAccumulate.py  DoserII.py  FindFreeFlag.py  FreeRS.py  GainEstimater.py  HAPhaserClass.py  HyssBP3DMPhaserClass.py  HyssSolveResolvePhaserClass.py  HyssSubstructureFinder.py  IceId.py  IndexerFactory.py  IntegraterFactory.py  LabelitBeamCentre.py  LabelitIndexer.py  MosflmCheckIndexerSolution.py  Mtz2Scalepack.py  MtzUtils.py  Mtzdump.py  MultiCrystalAnalysis.py  NullIntegraterImplementation.py  NullScaler.py  NullScalerImplementation.py  PhaseComputerFactory.py  (+30 more)
Schema/: Dataset.py  LatticeInfo.py  Object.py  Sweep.py  XBeam.py  XCrystal.py  XDetector.py  XDetectorHelpers.py  XDetectorHelpersTypes.py  XGoniometer.py  XGoniometerHelpers.py  XProject.py  XSample.py  XScan.py  XScanHelpers.py  XSweep.py  XSweep2.py  XSweep2XDS.py  XWavelength.py  __init__.py  readme.txt
Test/: fetch_test_data.py  run_tests.bat  run_tests.sh  test_python3_violations.py
Toolkit/: AimlessSurface.py  BackstopMask.py  Bijvoet.py  ComputeU.py  E4.py  FrameCC.py  KBScale.py  MendBKGINIT.py  Merger.py  MiniKappaCalibrate.py  MtzFactory.py  MultiMerger.py  NPP.py  PolyFitter.py  XDS2CBF.py  byte_offset.cpp  cbf_dookie.py  cbf_mini_to_full_with_template.py  cbfdump.py  ersatz_misset.py  example-adsc-cif-header.cif  find_HKL.py  fred_header.cbf  guess_the_atom.py  metatemplate.txt  multi.py  readme.txt  small.py  superdoofus.py  test_pilatus_scan.py  x1335.py
(+1726 files in other folders)
