[metadata]
name = xia2
description = An expert system for automated reduction of X-Ray diffraction data from macromolecular crystals
author = Diamond Light Source
author_email = scientificsoftware@diamond.ac.uk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
keywords = xia2
project-urls =
    Documentation = https://xia2.github.io/
    GitHub = https://github.com/xia2/xia2
    Changelog = https://github.com/xia2/xia2/blob/master/CHANGELOG.rst
    Bug-Tracker = https://github.com/xia2/xia2/issues

[options]
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src
# Configure flake8 with some defaults to reduce noise

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.

ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E711,E712,E713,E714,E721,E722,E901,F401,F402,F403,F405,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606
