[metadata]
name = xia2
description = An expert system for automated reduction of X-Ray diffraction data from macromolecular crystals
long_description = file: README.md
long_description_content_type = text/markdown
author = Diamond Light Source
author_email = dials-support@lists.sourceforge.net
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
keywords = xia2
project_urls =
    Documentation = https://xia2.github.io/
    GitHub = https://github.com/xia2/xia2
    Changelog = https://github.com/xia2/xia2/blob/master/CHANGELOG.rst
    Bug-Tracker = https://github.com/xia2/xia2/issues

[options]
include_package_data = True
install_requires =
    dials-data>=2.0
    Jinja2
    procrunner
    tabulate
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
