[metadata]
name = xia2
description = An expert system for automated reduction of X-Ray diffraction data from macromolecular crystals
long_description = file: README.md
long_description_content_type = text/markdown
author = Diamond Light Source
author_email = dials-support@lists.sourceforge.net
license = BSD-3-Clause
license_file = LICENSE
classifiers =
Development Status :: 5 - Production/Stable
Intended Audience :: Developers
License :: OSI Approved :: BSD License
Natural Language :: English
Operating System :: OS Independent
Programming Language :: Python :: 3
Programming Language :: Python :: 3.9
Programming Language :: Python :: Implementation :: CPython
keywords = xia2
project_urls =
Documentation = https://xia2.github.io/
GitHub = https://github.com/xia2/xia2
Changelog = https://github.com/xia2/xia2/blob/master/CHANGELOG.rst
Bug-Tracker = https://github.com/xia2/xia2/issues

[options]
include_package_data = True
install_requires =
dials-data >=2.0
Jinja2
pyyaml
tabulate
packages = find:
package_dir =
=src
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where = src
